<resources>
    <string name="menu_demo_id">2c85adab-4b8a-4fec-bfdb-9be11a618a93</string>

    <string name="app_name" translatable="false">MenuGenerator</string>
    <string name="sign_in">Sign In</string>

    <string name="my_business">My business</string>
    <string name="business_name">Business Name</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="address_3">Address 3</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_3">Address Line 3</string>

    <string name="phone_1">Phone 1</string>
    <string name="phone_2">Phone 2</string>
    <string name="phone_3">Phone 3</string>
    <string name="facebook">Facebook</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="instagram">Instagram</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="categories">Categories</string>
    <string name="category_name">Category Name</string>
    <string name="products">Products</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="preview">Preview</string>
    <string name="required">Required</string>
    <string name="invalid_value">Invalid value</string>
    <string name="generate">Generate</string>
    <string name="refresh">Refresh</string>
    <string name="edit_product">Edit Product</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="show_menus">Show menus</string>
    <string name="please_wait">Please wait</string>
    <string name="operation_failed_please_retry">Operation failed. Please retry</string>
    <string name="signout">Sign out</string>
    <string name="yes">Yes</string>
    <string name="not_now">Not now</string>
    <string name="do_you_want_to_add_a_new_company_now">Do you want to add a new company now?</string>
    <string name="are_you_sure_you_want_to_delete_this_company">All data related to this company will be deleted and cannot be recovered. Are you sure you want to continue?</string>
    <string name="are_you_sure_you_want_to_delete_this_menu">All data related to this menu will be deleted and cannot be recovered.Are you sure you want to delete this menu?</string>
    <string name="mandatory">Mandatory</string>
    <string name="finish">Finish</string>
    <string name="share_menu">Share Menu</string>
    <string name="share_qr_code">Share QR Code</string>
    <string name="share">Share</string>
    <string name="menu_settings">Menu settings</string>
    <string name="business_logo">Business logo</string>
    <string name="apply">Apply</string>
    <string name="basic">Basic</string>
    <string name="catalog">Catalog</string>
    <string name="add_company">Add Company</string>
    <string name="delete_company">Delete Company</string>
    <string name="delete_menu">Delete Menu</string>
    <string name="shape">Shape</string>
    <string name="business_info">Business info</string>
    <string name="show_logo">Show logo</string>
    <string name="social_media">Social media</string>
    <string name="rounded">Rounded</string>
    <string name="none">None</string>
    <string name="rounded_square">Rounded square</string>
    <string name="menu_name">Menu name</string>
    <string name="copy_link">Copy link</string>
    <string name="text_copied_to_clipboard">Text copied to clipboard</string>
    <string name="enabled">Enabled</string>
    <string name="network_error">Network error</string>
    <string name="check_your_network">Please check your internet connection and try again later</string>
    <string name="close">Close</string>
    <string name="warning">Warning</string>
    <string name="add_products_to_continue">Add products to this menu to continue</string>
    <string name="name_in_use">This name is in use</string>
    <string name="qr_code">QR Code</string>
    <string name="upgrade">Upgrade</string>
    <string name="buy">Buy</string>
    <string name="show_demo">Show demo</string>
    <string name="menus_are_saved_online_msg">Menus are saved online. Manage your menus from any android  phone keeping them linked to your account for easy access.</string>
    <string name="access_to_the_menu_qr_code_msg">Access to the menu QR code. Print and display the QR Code at your business. Customers can then scan it anytime to view your latest menu.</string>
    <string name="access_to_the_url_msg">Share the link on social media! This makes it easy for your clients to access your menu anytime, anywhere, directly from their phones or devices.</string>
    <string name="pending_payment">Pending payment</string>
    <string name="the_payment_is_being_processed">The payment is being processed. once it is applied you can return to this screen to complete the purchase.</string>
    <string name="an_error_has_occurred_validating_the_purchase">An error has occurred validating the purchase.</string>
    <string name="feature_not_supported">Feature not supported</string>
    <string name="item_already_owned">Item already owned</string>
    <string name="item_unavailable">Item unavailable</string>
    <string name="service_disconnected">Service disconnected</string>
    <string name="service_unavailable">Service unavailable</string>
    <string name="hide_demo">Hide demo</string>
    <string name="add_menu">Add menu</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="exit">Exit</string>
    <string name="changes_won_t_be_saved_exit_anyway">Changes won\'t be saved. Exit anyway?</string>
    <string name="product_added">Product added</string>
    <string name="product_edited">Product edited</string>
    <string name="cancelled">Cancelled</string>
    <string name="build_your_menu_from_scratch">Build your menu from scratch</string>
    <string name="import_menu_from_file">Import menu from file</string>
    <string name="next">Next</string>
    <string name="storage_permission_needed">Storage permission needed</string>
    <string name="storage_permission_details">This app needs access to your storage to search your digital menu file. By allowing permission, you will enable this feature</string>
    <string name="allow">Allow</string>
    <string name="tap_to_select_file">(Tap to select file)</string>
    <string name="finish_purchase">Finish Purchase</string>
    <string name="url">URL</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="reset">Reset</string>
    <string name="invalid_email">Invalid email</string>
    <string name="check_your_inbox">Check your inbox</string>
    <string name="we_have_sent_you_an_email_with_further_instructions">We have sent you an email with further instructions.</string>
    <string name="must_be_at_least_characters_long">Must be at least %1$s characters long.</string>
    <string name="password_reset">Password reset</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="passwords_don_t_match">"Passwords don't match. "</string>
    <string name="welcome_aboard">Welcome aboard!</string>
    <string name="your_account_has_been_created">Your account has been created. You can now log in using your email and password.</string>
    <string name="scan">Scan</string>
    <string name="print">Print</string>
    <string name="not_found">Not found</string>
</resources>