<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/optionRefresh"
        android:icon="@drawable/baseline_refresh_white_24"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/add"
        android:icon="@drawable/rounded_add_white_24"
        app:showAsAction="ifRoom"
        android:title="@string/add"/>

    <item android:id="@+id/showDemo"
        android:icon="@drawable/rounded_add_white_24"
        app:showAsAction="never"
        android:title="@string/show_demo"/>

    <item android:id="@+id/hideDemo"
        android:icon="@drawable/rounded_add_white_24"
        app:showAsAction="never"
        android:title="@string/hide_demo"/>
</menu>