<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/optionRefresh"
        android:icon="@drawable/baseline_refresh_white_24"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/optionNewMenuAction"
            android:icon="@drawable/rounded_add_white_24"
            android:title="@string/add_company"
            app:showAsAction="always"/>

    <item android:id="@+id/optionNewMenu"
        android:icon="@drawable/rounded_add_white_24"
        android:title="@string/add_company"
        app:showAsAction="never"/>

    <item android:id="@+id/optionLogout"
        android:title="@string/signout"
        app:showAsAction="never"/>
</menu>