<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <Spinner android:id="@+id/spnCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/spnCategories"
        app:layout_constraintEnd_toEndOf="@id/spnCategories"
        app:layout_constraintTop_toBottomOf="@id/spnCategories">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilProductPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilProduct">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="number|numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilProductDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilProductPrice">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProductDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"/>

    </com.google.android.material.textfield.TextInputLayout>



    <ImageView android:id="@+id/imgProduct"
        android:layout_width="200dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnAddProductImage"
        app:layout_constraintTop_toBottomOf="@id/tilProductDescription"
        android:background="@color/grey_500"
        android:scaleType="centerCrop"/>

    <Button android:id="@+id/btnAddProductImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:text="@string/search"
        app:layout_constraintStart_toEndOf="@id/imgProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imgProduct"
        app:layout_constraintBottom_toTopOf="@id/btnClearProductImage"/>


    <Button android:id="@+id/btnClearProductImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:text="@string/clear"
        app:layout_constraintStart_toEndOf="@id/imgProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAddProductImage"
        app:layout_constraintBottom_toBottomOf="@id/imgProduct"/>


</androidx.constraintlayout.widget.ConstraintLayout>